--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
         <p>Level Up Your Gaming Experience – Your One-Stop Shop for Games, Gear, and Greatness!</p>
       </div>
       <div class="header-buttons">
-        <button class="explore">Explore Games</button>
-        <button class="store">Go to Store</button>
-      </div>      
+        <a href="games.html" class="explore-btn"><button class="explore">Explore Games</button></a>
+        <a href="peripherals.html" class="store-btn"><button class="store">Go to Store</button></a>
+    </div>       
     </header>
   <section class="cards-container">
     <a href="#" class="card" style="background-image: url('images/card1.jpg')">
